security-ctrl/access-ctrls/namespace-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ns-pa
spec:
  mtls:
    #mode: PERMISSIVE #STRICT DISABLED
    mode: STRICT
