security-ctrl/access-ctrls/nonmember-fweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nonmember-fweb-service
  labels:
    app: nonmember-fweb-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nonmember-fweb-service
      version: v1
  template:
    metadata:
      labels:
        app: nonmember-fweb-service
        version: v1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/mesh-training-non-member/front-end:1.0
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: nonmember-fweb-service
  labels:
    app: nonmember-fweb-service
spec:
  selector:
    app: nonmember-fweb-service
  ports:
    - port: 80
      targetPort: 8080
      name: http
