security-ctrl/access-ctrls/external-service-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-service-vs
spec:
  hosts:
  - httpbin.org
  http:
  - timeout: 2s
    route:
      - destination:
          host: httpbin.org
        weight: 100
