security-ctrl/access-ctrls/backend-ap-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "backend-allow-all"
spec:
  selector:
    matchLabels:
      app: backend-service
  action: ALLOW
  rules:
  - {}
