security-ctrl/access-ctrls/backend-ap-allow-greetapp-frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "backend-allow-greetapp-frontend"
spec:
  selector:
    matchLabels:
      app: backend-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/mesh-training/sa/greetapp-frontend-sa"]
