security-ctrl/access-ctrls/backend-ap-allow-when.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "backend-allow-when"
spec:
  selector:
    matchLabels:
      app: backend-service
  action: ALLOW
  rules:
  - when:
    - key: request.headers[allowed]
      values: ["Y", "y", "Yes", "yes", "YES"]
