security-ctrl/access-ctrls/backend-ap-deny-ns.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "backend-deny-ns"
spec:
  selector:
    matchLabels:
      app: backend-service
  action: DENY
  rules:
  - from:
    - source:
        notNamespaces: ["mesh-training"]
