security-ctrl/access-ctrls/backend-ap-deny-path.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "backend-deny-path"
spec:
  selector:
    matchLabels:
      app: backend-service
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/greet"]
