security-ctrl/access-ctrls/ns-ap-allow-nothing.yaml
#The following example shows an ALLOW policy that matches nothing. 
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
spec:
  {}
