security-ctrl/access-ctrls/ns-ap-deny-all.yaml
#The following example shows a DENY policy that explicitly denies all access. 
#It will always deny the request even if there is another ALLOW policy allowing the request because the DENY policy takes precedence over the ALLOW policy. 
#This is useful if you want to temporarily disable all access to the workload
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec:
  action: DENY
  # the rules field has an empty rule, and the policy will always match.
  rules:
  - {}
