security-ctrl/access-ctrls/ns-np-allow-from-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-all-namespaces
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
